--- a/MinimalAPISample/appsettings.json
+++ b/MinimalAPISample/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultConnection": "Server=localhost; User Id=postgres; Password=postgres; Database=testminimalapi;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; User Id=postgres; Password=postgres; Database=testminimalapi;"
+  },
 }
